# ADHOC

./: .gitignore  ADHOC.cabal  ADHOC.hs  AGENDA  README
ADHOC/: Basis.hs  Circuits.hs  Constructivity.hs  Generics.hs  Internals.hs  Knowledge.hs  Model.hs  NetList.hs  NonDet.hs  Optimise.hs  Patterns.hs  Simulate.hs  Simulate_memo.hs  TruthTable.hs
ADHOC/Control/: Kesterel.hs
ADHOC/Control/Kesterel/: Kernel.hs  Kernel_schizophrenia.hs
ADHOC/Data/: Arithmetic.hs  ArithmeticCircuits.hs  SizedLists.hs
ADHOC/Knowledge/: BroadcastSPR.hs  BroadcastSPRII.hs  Clock.hs  ExplicitStateAutomata.hs  Hash.hs  SingleSPR.hs
ADHOC/ModelChecker/: CTL.hs  CounterExamples.hs  Knowledge.hs
Apps/Cache/: Broadcast.hs  Cache-simple.hs  Cache.cabal  Cache.hs
Apps/Cache/Tests/: 000_arbitrated_bus.hs  005_register.hs  010_dead_process.hs  020_cache_like_processes.hs  021_more_cache_like.hs  022_even_more_cache_like.hs  030_cache_bugfinder.hs  031_cache_bugfinder.hs
Apps/DiningCryptographers/: DiningCryptographers.cabal  DiningCryptographers.hs  DiningCryptographersLarge.hs
Apps/MuddyChildren/: MuddyChildren.cabal  MuddyChildren_clock.hs  MuddyChildren_spr.hs
Apps/Robot/: Robot.cabal  Robot_clock.dot  Robot_clock.hs  Robot_spr.dot  Robot_spr.hs  Robot_spr_broadcast.dot  Robot_spr_broadcast.hs
Apps/SandP/: Dialogue.hs  Mr-S-P.lhs  SandP.cabal  SandP_circuits.hs  SandP_circuits_dialogue.hs  SandP_circuits_naive.hs
Apps/Smullyan/: Smullyan.cabal
Apps/Smullyan/TheLadyOrTheTiger/: MetaPuzzle1.hs  MetaPuzzle2.hs  MetaPuzzle3.hs  MetaPuzzle3_polished.hs  MetaPuzzle4.hs  MetaPuzzle5.hs  TheLadyOrTheTigerMetaPuzzle.hs
Tests/: Basis.hs  KBPBasis.hs  KesterelBasis.hs  ModelCheckerBasis.hs
Tests/00_Circuits/: 000_id.hs  005_trueA.hs  010_notA.hs  012_muxA.hs  015_material_implication.hs  020_id_loop.hs  021_id_loop_loop.hs  022_xor_loop.hs
Tests/01_CyclicCircuits/: 010_nand.hs  015_nand_embedded.hs  017_nand_embedded_not_cons.hs  018_nand_embedded_irrelevant.hs  022_xor_combLoop.hs  025_shiple_berry_touati.hs  026_shiple_berry_touati_probe.hs  030_fgORgf.hs
Tests/02_SequentialCircuits/: 001_delay_trueA.hs  002_delay_falseA_trueA.hs  005_delay_init_combLoop_nonconstructive.hs  006_delay_init_rec.hs  008_delay_nand.hs  009_nand_delay.hs  010_alternate.hs  011_alternate_combLoop.hs  012_alternate_combLoop_period_two.hs  015_shiple_berry_touati_probe.hs  017_delay_init_nonconstructive.hs  020_fORg.hs  024_constructive_unreachable_state.hs  025_nonconstructive_reachable_state.hs  030_fby.hs  035_delay_rec.hs  036_delay_combLoop.hs  040_delay_nested.hs  050_berry_sustain.hs
Tests/03_Arithmetic/: 005_eq.hs  007_ord.hs  010_add_sub.hs  015_mul.hs
Tests/04_Generics/: 010_inverses.hs  040_generics_delay.hs  050_generics_delay_mux.hs  060_generics_delay_mux_arithmetic.hs
Tests/05_ModelChecker/: 000_stateless.hs  010_const_true_unfair.hs  015_combLoop_delay.hs  020_probes.hs  050_isInitialState.hs
Tests/07_Nondeterminism/: 000_nondet_delay.hs  005_nondet_delay_combLoop.hs  010_nondet_invariant.hs  015_nondet_invariant_arithmetic.hs  020_init_nondet_false_empty.hs  025_init_nondet_one_state.hs  030_init_nondet_pairs.hs  035_init_nondet_recurring.hs
Tests/08_Kesterel/: 000_nothing.hs  001_nothing_nothing_seqenv.hs  002_nothing_nothing_parenv.hs  003_pause.hs  005_halt.hs  012_loop_pause_delay.hs  013_loop_nothing_non_constructive.hs  020_signal_emit.hs  021_signal_not_emitted.hs  022_signal_present_non_constructive.hs  023_signal_tested_not_emited.hs  024_loop_signal_schizo.hs  025_signal_emit_emit.hs  026_signalE_signalE_emit.hs  027_signalE_signalE_emit.hs  028_if_id.hs  030_signalE_non_constructive.hs  031_signalE_non_constructive.hs  040_sustain_signal_pause_non_schizo.hs  044_sustain_while.hs  050_catch_not_thrown.hs  051_catch_thrown.hs  052_catch_nested.hs  053_catch_loop.hs  054_catch_nested.hs  055_loop_until_trueA.hs  056_catch_emit_stop.hs  057_catch_loop.hs  060_abortE.hs  061_abort_weak.hs  070_par_exn.hs  090_halt_par_halt.hs  100_parallel_emit_present.hs  101_loop_parallel_emit_present.hs  102_loop_parallel_emit_present_in.hs  103_signalE_environment.hs  104_signalE_environment.hs  105_signalE_environment_sigBool.hs  110_sustain_parallel_nothing_schizo.hs  112_loopEach.hs  (+14 more)
Tests/08_Kesterel/BugFinders/: 000_parallel_coPaused.hs  001_parallel_coPaused2.hs  002_parallel_present.hs  003_signal_loop_pause.hs
Tests/10_Knowledge/: 000_agent.hs  001_kbpTest_no_agent.hs  002_kbpTest_not_subjective.hs  010_kbpTest.hs  020_agent_obs_init.hs  022_agent_obs_boot.hs  024_agent_obs_rev_boot.hs  026_agent_obs_nondet_boot.hs  030_agent_obs_nested.hs  031_agent_obs_init_nested.hs  032_agent_private_channel.hs  040_agent_private_channel_cknows.hs  050_kbpTest_init.hs
