Name: Smullyan
Version: 0.1.0
Cabal-version: >= 1.6
Build-type: Simple
Copyright: Peter Gammie
Maintainer: peteg42@gmail.com
Author: Peter Gammie
Homepage: http://peteg.org/circuits-and-knowledge/
License: GPL
Synopsis: Puzzles by Raymond Smullyan
Description:
  Many of Raymond Smullyan's puzzles have an epistemic dimension.

Library
  Build-depends: base >= 3 && < 5, ADHOC, pretty
  Extensions: Arrows, EmptyDataDecls, ExistentialQuantification, FlexibleContexts, FlexibleInstances, GeneralizedNewtypeDeriving, MultiParamTypeClasses, NoImplicitPrelude, NoMonomorphismRestriction, Rank2Types, ScopedTypeVariables, TypeFamilies, TypeOperators, TypeSynonymInstances
  Ghc-options: -Wall
  Exposed-Modules:
    TheLadyOrTheTiger.MetaPuzzle1
    TheLadyOrTheTiger.MetaPuzzle2
    TheLadyOrTheTiger.MetaPuzzle3
    TheLadyOrTheTiger.MetaPuzzle4
    TheLadyOrTheTiger.MetaPuzzle5
    TheLadyOrTheTiger.TheLadyOrTheTigerMetaPuzzle
